--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-1.37MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-483.8KB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: bfbd5c7f-2c23-44fd-8393-d0da67b23a49, sni: sgg.2046.gq, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.58MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.54MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
   - {name: 🇩🇪 德国-2.96MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇦🇺 澳大利亚-2.01MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.58MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-475.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
